0.4: testing begins
	add transproxy and masquerading support
	fix syntax problems with iptables output
	simple logging support (logs only initiating packets)
	rule checking -- ports only allowed with tcp or udp

0.3:
	add ipfilter backend
	fix yet another silly bug in main()
	add warning notice to cisco driver
	cisco driver supports port ranges now

0.2: Various improvements
	rewrote iptables driver
	added ipchains driver
	added beginnings of Cisco IOS ACL driver
		(see TODO for why this doesn't work yet)
	added TODO and HONESTY files

0.1: Initial release
	iptables driver
	a few bugs

$Id: HISTORY,v 1.8 2001/10/06 19:07:17 matthew Exp $